# bch-pay-client

./: HEARTBEAT.md  README.md
.openclaw/: workspace-state.json
bch-pay-client/: .env.example  .gitignore  .qa_test_132ce851.json  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  INSTALL.md  LICENSE  Makefile  QUICKSTART.md  README.md  ROADMAP.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements.txt  run.py  setup.py  simple_demo.py
bch-pay-client/.github/: pull_request_template.md
bch-pay-client/.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
bch-pay-client/.github/workflows/: ci.yml  publish.yml
bch-pay-client/bch_pay_client/: __init__.py  core.py  exceptions.py
bch-pay-client/bch_pay_client/backends/: __init__.py  base.py  demo.py  paytaca.py
bch-pay-client/docs/: api.md  discord.md  fastapi.md  paytaca.md  qa.md  send-mainnet.md  telegram.md  tokens.md  trading.md  troubleshooting.md  webhooks.md
bch-pay-client/examples/: agent_api.py  agent_cli.py  agent_compute_rental.py  agent_dataset_marketplace.py  agent_discord.py  agent_finetune.py  agent_gpu_rental.py  agent_hybrid.py  agent_image_gen.py  agent_llm_api.py  agent_local.py  agent_telegram.py  agent_telegram_trading.py  agent_token_demo.py  agent_trading.py  agent_venture_qa.py  send_mainnet.py
bch-pay-client/tests/: __init__.py  test_basic.py
memory/: 2026-03-25-auto-approve.md  2026-03-25-auto-persist.md  2026-03-25-language-catalan.md  2026-03-25-nightly-improve-text.py  2026-03-25-nightly-improve-v2.py  2026-03-25-nightly-improve.py  2026-03-28.md  (+10 more)
